# fastapi-react-socket-app

./: LICENSE  README.md  pyproject.toml
client/: package-lock.json
client/src/: App.js  index.css
client/src/components/: Socket.js  SocketComponents.js
client_server_socket/: package.json
client_server_socket/src/components/: Init.js  LoginModal.js
server/: init_app.py  main.py  mocked_data.py  schemas.py  socket_client.py
